# fastapi-svelte-template

./: .gitignore  README.md  cookiecutter.json  database.db
{{cookiecutter.project_slug}}/: .gitignore  README.md  create_admin.py  pyproject.toml  requirements.txt
{{cookiecutter.project_slug}}/backend/: app.py  auth.py  config.py  configuration.py  main.py
{{cookiecutter.project_slug}}/backend/api_v1/: item_api.py  router.py  user_api.py
{{cookiecutter.project_slug}}/backend/auth/: __init__.py  api.py  context.py  deps.py
{{cookiecutter.project_slug}}/backend/crud/: base_crud.py  deps.py  item_crud.py  user_crud.py
{{cookiecutter.project_slug}}/backend/tests/: conftest.py  test_root.py
{{cookiecutter.project_slug}}/backend/tests/api_v1/: test_item_api.py
{{cookiecutter.project_slug}}/frontend/: package-lock.json  package.json
{{cookiecutter.project_slug}}/frontend/public/: index.html
