[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.project_version}}"
description = ""
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
aiosqlite = "0.17.0"
appdirs = "^1.4.4"
asgiref = "^3.4.0"
click = "^8.0.1"
colorama = "^0.4.4"
databases = "^0.4.3"
fastapi = "^0.65.2"
h11 = "^0.12.0"
mypy-extensions = "^0.4.3"
pathspec = "^0.8.1"
pydantic = "^1.8.2"
python-multipart = "^0.0.5"
regex = "^2021.4.4"
six = "^1.16.0"
toml = "^0.10.2"
typing-extensions = "^3.10.0"
uvicorn = "^0.14.0"
aiofiles = "^0.7.0"
Jinja2 = "^3.0.1"
pytest-dependency = "^0.5.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.dev-dependencies]
black = "^21.6b0"
mypy = "^0.910"
pytest = "^6.2.4"
requests = "^2.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
